tests/machine/x/erlang/update_stmt.error
exit status 127
/workspace/mochi/tests/machine/x/erlang/update_stmt.erl:6:5: Warning: variable 'People0' is unused
%    6|     People0 = [case (maps:get(age, PeopleItem0) >= 18) of true -> PeopleItem0#{status => "adult", age => (maps:get(age, PeopleItem0) + 1)}; _ -> PeopleItem0 end || PeopleItem0 <- People],
%     |     ^

/workspace/mochi/tests/machine/x/erlang/update_stmt.erl:6:78: Warning: a term is constructed, but never used
%    6|     People0 = [case (maps:get(age, PeopleItem0) >= 18) of true -> PeopleItem0#{status => "adult", age => (maps:get(age, PeopleItem0) + 1)}; _ -> PeopleItem0 end || PeopleItem0 <- People],
%     |                                                                              ^

escript: exception error: test_failed
  in function  update_stmt_erl__escript__1752__328634__520340__8964:main/1 (/workspace/mochi/tests/machine/x/erlang/update_stmt.erl, line 7)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
  in call from init:start_em/1 
  in call from init:do_boot/3 

   4: main(_) ->
   5:     People = [#{"__name" => "Person", name => "Alice", age => 17, status => "minor"}, #{"__name" => "Person", name => "Bob", age => 25, status => "unknown"}, #{"__name" => "Person", name => "Charlie", age => 18, status => "unknown"}, #{"__name" => "Person", name => "Diana", age => 16, status => "minor"}],
   6:     People0 = [case (maps:get(age, PeopleItem0) >= 18) of true -> PeopleItem0#{status => "adult", age => (maps:get(age, PeopleItem0) + 1)}; _ -> PeopleItem0 end || PeopleItem0 <- People],
   7:     (case (People == [#{"__name" => "Person", name => "Alice", age => 17, status => "minor"}, #{"__name" => "Person", name => "Bob", age => 26, status => "adult"}, #{"__name" => "Person", name => "Charlie", age => 19, status => "adult"}, #{"__name" => "Person", name => "Diana", age => 16, status => "minor"}]) of true -> ok; _ -> erlang:error(test_failed) end),
   8:     io:format("~p~n", ["ok"]).
